--- a/style.css
+++ b/style.css
@@ -133,7 +133,7 @@ body {
 
 @media (max-width: 768px) {
     .floating-box p {
-        font-size: 1.0rem; /* Reduza o tamanho da fonte para telas menores, se necessário */
+        font-size: 0.9rem; /* Reduza o tamanho da fonte para telas menores, se necessário */
     }
 }
 
@@ -143,6 +143,13 @@ body {
 
 .floating-box.clicked {
     transform: rotate(10deg); /* Rotaciona o contêiner ao ser clicado */
+}
+
+.listar {
+  border: none;
+  height: 8px; /* Ajuste a altura para controlar a espessura */
+  background: linear-gradient(to right, transparent, #000000, transparent);
+  box-shadow: 10px 5px 5px #000000;
 }
 
   
